styles/about.css
.main-content > * {
  margin: 5em 0;
}

h1 {
  background-color: #000424;
  color: #fffbfa;
  padding: .3em .3em .3em 2em;
}

.group-div {
  width: 100%;
  height: 45em;
}

.group-div img {
  display: block;
  margin: auto auto;
  height: 95%;
  border: 2px solid black;
  border-radius: 5px;
}

.person-grid {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  align-items: center;
  justify-content: center;
  margin: 0 auto 5em auto;
}

#person-checker {
  display: none;
}

.person-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;

  width: 15em;
  height: 28em;
  padding: 1em;
  margin: 1em;

  border: 2px solid black;
  border-radius: 5px;

  background-color: #000424d0;

  text-align: center;
  transition: ease-out 0.5s;
}

.person-container > * {
  transition: inherit;
  transition-delay: .15s;
}

.person-container img {
  display: block;
  margin: auto auto;
  width: 13em;
  border: 2px solid black;
  border-radius: 5px;
}

.person-container p {
  background-color: none;
  height: 0;
  overflow: hidden;
}

.person-container h2 {
  /*color: #fffbfa;*/
  background-color: #fffbfa;
  padding: 3px 15px;
  border-radius: 20px 0 20px 0;
}

.person-container-checked {
  width: 20em;
  height: 35em;
}

.person-container-checked p {
  height: 12em;
}

.leaders {
  width: 100%;
  height: 70em;

  margin-bottom: 5em;
}

.person-container-leader {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  
  background-color: #000424d0;

  border: 2px solid #000424;
  border-radius: 5px;
  
  width: 60em;
  height: 70em;
  padding: 2em;
  margin: auto auto;
}

.person-container-leader img {
  height: 50%;
  margin-bottom: -13em;
  border: 2px solid black;
  border-radius: 5px;
}

.person-container-leader div {
  text-align: center;
  width: 25em;
  height: 28em;
  margin: 15em auto 0 auto;
  padding: 1em;

  border: 2px solid black;
  border-radius: 5px;

  background-color: #000424;
}

.person-container-leader div h2 {
  background-color: #fffbfa;
  padding: 5px 20px;
  border-radius: 20px 0 20px 0;
}

.person-container-leader div p {
  color: whitesmoke;
  margin-top: 1em;
  font-size: 14px;
}

